--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
         <header>
             <div class="nome-header">
                 <img src="imagens/logo.jpeg" alt="" class="logo">
-                <h3>Larcon<br>Planejados</h3>
-                <nav>
-                    <a href="#sobre">Sobre</a>
-                    <a href="#orc">Orçamento</a>
-                    <a href="#fts">Fotos</a>
-                    <a href="#loc">Localização</a>
-                    <a href="#conts">Contatos</a>
-                </nav>
+                <h6>Larcon<br>Planejados</h6>
+            </div>
+            <nav>
+                <a href="#sobre">Sobre</a>
+                <a href="#orc">Orçamento</a>
+                <a href="#fts">Fotos</a>
+                <a href="#loc">Localização</a>
+                <a href="#conts">Contatos</a>
+            </nav>
         </header>
         <main>
             <section class="ap" id="home">
@@ -27,8 +28,8 @@
                     Seu navegador não suporta vídeo HTML5.
                 </video>
                 <div class="content">
-                    <h1>Transforme seu ambiente</h1>
-                    <a href="#orc" class="btnOrc">Clique aqui e faça acontecer</a>
+                    <h1>Transforme seu ambiente</h1>                    
+                        <a href="#orc" class="btnOrc">Clique aqui e faça acontecer</a>                    
                 </div>
             </section>
         <section id="sobre">
@@ -44,12 +45,12 @@
             <section class="cardOrc">
                 <form id="orcForm" method="post" action="enviar_email.php">
                    <div class="inputText">
-                    <input type="text" id="nome" nome="nome" placeholder="Nome:"><br><br>
-                    <input type="text" id="email" nome="email" placeholder="Email:"><br><br>
-                    <input type="tel" id="tel" nome="tel" pattern="[0-9]{2}-[0-9]{5}-[0-9]{4}" placeholder="Telefone:"><br><br>
+                    <input type="text" id="nome" nome="nome" placeholder=" Nome:"><br><br>
+                    <input type="text" id="email" nome="email" placeholder=" Email:"><br><br>
+                    <input type="tel" id="tel" nome="tel" pattern="[0-9]{2}-[0-9]{5}-[0-9]{4}" placeholder=" Telefone:"><br><br>
                    </div>
                     <div class="textArea">
-                        <textarea name="msg" id="msg" cols="30" rows="10" placeholder=" Eu gostaria de solicitar um orçamento,  poderia me contatar pelo WhatsApp?"></textarea><br><br>
+                        <textarea name="msg" id="msg" cols="30" rows="10" placeholder="  Eu gostaria de solicitar um orçamento,  poderia me contatar pelo WhatsApp?"></textarea><br>
                     <input id="enviar" type="button" value="Enviar" onclick="Enviar()">
                     </div>
                 </form>
@@ -59,7 +60,7 @@
             <img src="imagens/salarack3.jpg" alt="imagem sala rack3" class="fundoRacks">
             <section id="fts">
                 <div class="textoRacks">
-                    <h1>Inspire-se</h1>
+                    <h2>Inspire-se</h2>
                     <h3>Salas</h3>
                 </div>
                 <section class="carrocelSalas" id="img">
@@ -78,7 +79,7 @@
             <img src="imagens/coz8.jpg" alt="imagem Cozinha 8" class="fundoCoz">              
             <section class="coz">
                 <div class="textoCoz">
-                    <h1>Inspire-se</h1>
+                    <h2>Inspire-se</h2>
                     <h3>Cozinhas</h3>
                 </div>
                 <div class="carouselCoz">
@@ -97,7 +98,7 @@
             <section class="cardLoc">
                 <a href="https://www.google.com/maps?gs_lcrp=EgZjaHJvbWUqCAgDEEUYJxg7MgkIABBFGDkYgAQyBggBEEUYPDIGCAIQRRg8MggIAxBFGCcYOzIICAQQRRgnGDsyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQg4MTc3ajBqN6gCALACAA&um=1&ie=UTF-8&fb=1&gl=br&sa=X&geocode=KSE9Quqsv8iUMW3lQ4DJPBAl&daddr=Av.+Em%C3%ADlio+B%C3%B4sco,+2191b+-+Mat%C3%A3o,+Sumar%C3%A9+-+SP,+13179-132" class="loc"><img src="imagens/loc.png" alt="Localização" class="loc"></a>            
                 <div class="textoLoc">
-                    <h2>Av. Emílio Bôsco, 2191b - Matão, Sumaré - SP, 13179-132</h2>
+                    <h3>Av. Emílio Bôsco, 2191b - Matão, Sumaré - SP, 13179-132</h3>
                 </div>
             </section>
         </section>
@@ -113,13 +114,13 @@
            
             <div class="nome">
                  <img src="imagens/logo.jpeg" alt="Logo" class="logo">
-                <h3>Larcon<br>Planejados</h3>
+                <h6>Larcon<br>Planejados</h6>
             </div>
-            <div class="Telefone"> <h3>Tel: (19) 98155-7379<br>larconplanejados@gmail.com</h3>
+            <div class="Telefone"> <h6>Tel: (19) 98155-7379<br>larconplanejados@gmail.com</h6>
             </div>
-        </section>            
-        <a href="https://pessoal-6cen.vercel.app/" class="autor">By:CMDev</a>
+        </section>
         </footer>
+        <a href="https://pessoal-6cen.vercel.app/" class="autor">By:CMDev</a>
     </div>
 
   <script src="scripts/carousel.js"></script>
