--- a/index.html
+++ b/index.html
@@ -43,17 +43,18 @@
         </section>
         <section id="orc"><img src="imagens/sala rack.jpg" alt="imagem sala rack2" class="fundoOrc">
             <section class="cardOrc">
-                <form id="orcForm" method="post" action="enviar_email.php">
-                   <div class="inputText">
-                    <input type="text" id="nome" nome="nome" placeholder=" Nome:"><br><br>
-                    <input type="text" id="email" nome="email" placeholder=" Email:"><br><br>
-                    <input type="tel" id="tel" nome="tel" pattern="[0-9]{2}-[0-9]{5}-[0-9]{4}" placeholder=" Telefone:"><br><br>
-                   </div>
+                <form id="orcForm" method="post" action="<?php echo htmlspecialchars($_SERVER['PHP_SELF']); ?>">
+                    <div class="inputText">
+                        <input type="text" id="nome" name="nome" placeholder="Nome:"><br><br>
+                        <input type="text" id="email" name="email" placeholder="Email:"><br><br>
+                        <input type="tel" id="tel" name="tel" pattern="[0-9]{2}[0-9]{5}[0-9]{4}" placeholder="Telefone:"><br><br>
+                    </div>
                     <div class="textArea">
-                        <textarea name="msg" id="msg" cols="30" rows="10" placeholder="  Eu gostaria de solicitar um orçamento,  poderia me contatar pelo WhatsApp?"></textarea><br>
-                    <input id="enviar" type="button" value="Enviar" onclick="Enviar()">
+                        <textarea name="msg" id="msg" cols="30" rows="10" placeholder="Eu gostaria de solicitar um orçamento, poderia me contatar pelo WhatsApp?"></textarea><br><br>
+                        <input type="submit" value="Enviar">
                     </div>
                 </form>
+                
             </section>
         </section>
         <section id="fotosRacks">
