--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <nav>
                 <a href="#sobre">Sobre</a>
-                <a href="#orc">Orçamento</a>
+                <a href="https://forms.gle/CndfyfCLdADkqUVRA">Orçamento</a>
                 <a href="#fts">Fotos</a>
                 <a href="#loc">Localização</a>
                 <a href="#conts">Contatos</a>
@@ -29,48 +29,41 @@
                 </video>
                 <div class="content">
                     <h1>Transforme seu ambiente</h1>                    
-                        <a href="#orc" class="btnOrc">Clique aqui e faça acontecer</a>                    
+                        <a href="https://wa.me/5519981557379" class="btnOrc">Clique aqui e faça acontecer</a>                    
                 </div>
             </section>
         <section id="sobre">
-            <img src="imagens/cozinha2 (1).png" alt="imagem cozinha2" class="fundoSobre">
+            <img src="imagens/coz2.png" alt="imagem cozinha2" class="fundoSobre">
             <section class="cardSobre">
-                <img src="imagens/cozinha1 (1).jpg" alt="cozinha1" class="imgsobre">
+                <img src="imagens/coz1.jpg" alt="cozinha1" class="imgsobre">
                 <div class="textoSobre">
-                    <p>Com 25 anos de experiência e uma equipe qualificada, estamos prontos para atender às suas necessidades de móveis personalizados de alta qualidade.</p>
+                    <p>Com 25 anos de experiência e uma equipe qualificada, estamos prontos para atender às suas necessidades de móveis personalizados de alta qualidade.</p><br>
+                    <a href="https://wa.me/5519981557379" class="btnOrc">Entre em contato</a>
                 </div>
             </section>
         </section>
-        <section id="orc"><img src="imagens/sala rack.jpg" alt="imagem sala rack2" class="fundoOrc">
+        <!-- <section id="orc"><img src="imagens/sala rack.jpg" alt="imagem sala rack2" class="fundoOrc">
             <section class="cardOrc">
-                <form id="orcForm" method="post" action="<?php echo htmlspecialchars($_SERVER['PHP_SELF']); ?>">
-                    <div class="inputText">
-                        <input type="text" id="nome" name="nome" placeholder="Nome:"><br><br>
-                        <input type="text" id="email" name="email" placeholder="Email:"><br><br>
-                        <input type="tel" id="tel" name="tel" pattern="[0-9]{2}[0-9]{5}[0-9]{4}" placeholder="Telefone:"><br><br>
-                    </div>
-                    <div class="textArea">
-                        <textarea name="msg" id="msg" cols="30" rows="10" placeholder="Eu gostaria de solicitar um orçamento, poderia me contatar pelo WhatsApp?"></textarea><br><br>
-                        <input type="submit" value="Enviar">
-                    </div>
+                <form id="orcForm" method="post" action="https://forms.gle/eFRvY9T9T7NEDXXm6" target="_blank">
+                    <iframe id="gForm" src="https://docs.google.com/forms/d/e/1FAIpQLSeI9onbeVvOqz3MUUTr8E2zBdW6AedTHwTxRzpl-FuE_aVcFg/viewform?embedded=true" width="1000" height="600" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
                 </form>
                 
             </section>
-        </section>
+        </section> -->
         <section id="fotosRacks">
-            <img src="imagens/salarack3.jpg" alt="imagem sala rack3" class="fundoRacks">
+            <img src="imagens/rack3.jpg" alt="imagem sala rack3" class="fundoRacks">
             <section id="fts">
                 <div class="textoRacks">
                     <h2>Inspire-se</h2>
                     <h3>Salas</h3>
                 </div>
                 <section class="carrocelSalas" id="img">
-                    <div class="slide"><img src="imagens/sala1.jpeg" alt="sala1" class="rack1"></div>
-                    <div class="slide"><img src="imagens/sala2.jpg" alt="sala2" class="rack2"></div>
-                    <div class="slide"><img src="imagens/sala3.jpg" alt="sala3" class="rack3"></div>
-                    <div class="slide"><img src="imagens/salarack1.jpg" alt="sala4" class="rack4"></div>
-                    <div class="slide"><img src="imagens/salarack2.jpg" alt="sala5" class="rack5"></div>
-                    <div class="slide"><img src="imagens/salarack3.jpg" alt="sala6" class="rack6"></div>              
+                    <div class="slide"><img src="imagens/rack1.jpeg" alt="sala1" class="rack1"></div>
+                    <div class="slide"><img src="imagens/rack2.jpg" alt="sala2" class="rack2"></div>
+                    <div class="slide"><img src="imagens/rack3.jpg" alt="sala3" class="rack3"></div>
+                    <div class="slide"><img src="imagens/rack4.jpg" alt="sala4" class="rack4"></div>
+                    <div class="slide"><img src="imagens/rack5.jpg" alt="sala5" class="rack5"></div>
+                    <div class="slide"><img src="imagens/rack6.jpg" alt="sala6" class="rack6"></div>              
                 </section>
                 <button id="prevBtnSala"><</button>
                 <button id="nextBtnSala">></button>
@@ -84,22 +77,24 @@
                     <h3>Cozinhas</h3>
                 </div>
                 <div class="carouselCoz">
-                    <div class="slide"><img src="imagens/cozinha1 (1).jpg" alt="coz1" class="coz1"></div>                   
-                    <div class="slide"><img src="imagens/cozinha2 (1).png" alt="coz2" class="coz2"></div>
+                    <div class="slide"><img src="imagens/coz1.jpg" alt="coz1" class="coz1"></div>                   
+                    <div class="slide"><img src="imagens/coz2.png" alt="coz2" class="coz2"></div>
                     <div class="slide"><img src="imagens/coz3.jpg" alt="coz3" class="coz3"></div>
                     <div class="slide"><img src="imagens/coz6.jpg" alt="coz4" class="coz4"></div>                    
                     <div class="slide"><img src="imagens/coz5.jpg" alt="sala5" class="coz5"></div>
-                    <div class="slide"><img src="imagens/coz4.jpg" alt="sala6" class="coz6"></div>                                
+                    <div class="slide"><img src="imagens/coz4.jpg" alt="sala6" class="coz6"></div>
+                    <div class="slide"><img src="imagens/coz7.jpg" alt="sala5" class="coz5"></div>
+                    <div class="slide"><img src="imagens/coz8.jpg" alt="sala6" class="coz6"></div>                              
                 </div>
                 <button id="prevBtnCoz"><h1><</h1></button>
                 <button id="nextBtnCoz"><h1>></h1></button>
             </section>
         </section>
-        <section id="loc"><img src="imagens/sobre-fundo.jpeg" alt="imagem localização fundo" class="fundoLoc">
+        <section id="loc"><img src="imagens/restau.jpeg" alt="imagem localização fundo" class="fundoLoc">
             <section class="cardLoc">
                 <a href="https://www.google.com/maps?gs_lcrp=EgZjaHJvbWUqCAgDEEUYJxg7MgkIABBFGDkYgAQyBggBEEUYPDIGCAIQRRg8MggIAxBFGCcYOzIICAQQRRgnGDsyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQg4MTc3ajBqN6gCALACAA&um=1&ie=UTF-8&fb=1&gl=br&sa=X&geocode=KSE9Quqsv8iUMW3lQ4DJPBAl&daddr=Av.+Em%C3%ADlio+B%C3%B4sco,+2191b+-+Mat%C3%A3o,+Sumar%C3%A9+-+SP,+13179-132" class="loc"><img src="imagens/loc.png" alt="Localização" class="loc"></a>            
                 <div class="textoLoc">
-                    <h3>Av. Emílio Bôsco, 2191b - Matão, Sumaré - SP, 13179-132</h3>
+                    <h3>Av. Emílio Bôsco, 2191b - Matão, Sumaré - SP, 13179-132</h3><br><a href="https://wa.me/5519981557379" class="btnOrc">Entre em contato</a>
                 </div>
             </section>
         </section>
